# OASIS-LLM

./: .env.example  .gitignore  .prettierignore  4qspg-datacite.json  AGENT_START_HERE.md  CITATION.cff  CONTRIBUTORS.md  IMPLEMENTATION_PUBLIC_RELEASE.md  LICENSE  OASIS.R  PLAN.md  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
OASIS/: Kurdi_BRM_2017.01-abstract-and-intro.txt  Kurdi_BRM_2017.02-method.txt  Kurdi_BRM_2017.03-results.txt  Kurdi_BRM_2017.04-conclusion.txt  Kurdi_BRM_2017.05-appendices.txt  Kurdi_BRM_2017.full.txt  OASIS_Inpress.01-abstract-and-intro.txt  OASIS_Inpress.02-method.txt  OASIS_Inpress.03-results.txt  OASIS_Inpress.04-conclusion.txt  OASIS_Inpress.full.txt
analysis/llm_vs_human_uniform40/: README.md  ttests_aggregate.csv  ttests_per_model.csv
configs/experiments/: smoke-multi-config.yaml
configs/runs/: local-qwen3vl-full.yaml  pilot-gemini-31-pro.yaml  pilot-gemma4-31b.yaml  pilot-qwen36-plus.yaml  pilot10-gemma4-31b-v2.yaml  pilot10-gemma4-31b.yaml  pilot30-qwen35-local.yaml  smoke-dataset-curated.yaml  smoke-ollama-qwen3vl.yaml  smoke-openrouter-gemma4.yaml  verify-gemma4.yaml
data/public/: README.md
data/raw/: OASIS_codebook.txt  OASIS_data.csv
results/: README.md
results/llm_vs_human_uniform40/: README.md  descriptives.csv  (+2 more)
scripts/: OASIS.R  diag_db.py  llm_vs_human_ttest.py  purge_mlx_thinking_runs.py  purge_now.py  recover_db.py  scatter_by_category.py  scatter_by_model.py  scatter_one_category.py  smoke_llm_vs_human.py
tests/: test_estimates.py  test_public_bootstrap.py
(+68 files in other folders)
